Code: Train CNN with larger datasets

--- a/CNN/CNN.ipynb
+++ b/CNN/CNN.ipynb
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-18 16:57:17.783896: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2025-03-08 19:03:03.520741: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-02-18 16:57:17.869951: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-03-08 19:03:03.602094: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -61,11 +61,12 @@
     "    data_GGF_SR = np.load(npy_dir0 / 'GGF_in_SR-data.npy')\n",
     "    data_GGF_BR = np.load(npy_dir0 / 'GGF_in_BR-data.npy')\n",
     "\n",
-    "    n_VBF_SR, n_VBF_BR, n_GGF_SR, n_GGF_BR = nevents\n",
+    "    n_VBF_SR, n_GGF_SR, n_VBF_BR, n_GGF_BR = nevents\n",
     "    n_test = 10000\n",
     "    r_tr, r_vl = ratios\n",
     "\n",
     "    np.random.seed(seed)\n",
+    "    print(data_GGF_SR.shape[0])\n",
     "    idx_VBF_SR = np.random.choice(data_VBF_SR.shape[0], n_VBF_SR + n_test, replace=False)\n",
     "    idx_VBF_BR = np.random.choice(data_VBF_BR.shape[0], n_VBF_BR, replace=False)\n",
     "    idx_GGF_SR = np.random.choice(data_GGF_SR.shape[0], n_GGF_SR + n_test, replace=False)\n",
@@ -123,6 +124,7 @@
     "\n",
     "        new_label_tr = np.zeros(new_data_tr.shape[0])\n",
     "        new_label_tr[:idx_VBF_SR_tr.shape[0] + idx_GGF_SR_tr.shape[0]] = 1\n",
+    "        print()\n",
     "        new_label_vl = np.zeros(new_data_vl.shape[0])\n",
     "        new_label_vl[:idx_VBF_SR_vl.shape[0] + idx_GGF_SR_vl.shape[0]] = 1\n",
     "        new_label_te = np.zeros(new_data_te.shape[0])\n",
@@ -202,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = './config_files/mjj_cut_config_01.json'"
+    "config_path = './config_files/mjj_cut_L_3000_config_01.json'"
    ]
   },
   {
@@ -245,7 +247,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preparing dataset from ['../Sample/data/mjj_cut/pre-processing/40x40/']\n"
+      "48209\n",
+      "Preparing dataset from ['../Sample/data/mjj_cut/pre-processing/40x40/']\n",
+      "\n"
      ]
     }
    ],
@@ -268,8 +272,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "947 2638\n",
-      "238 661\n",
+      "14900 20982\n",
+      "3726 5247\n",
       "10000 10000\n"
      ]
     }
