--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -34,6 +34,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Luminosity 300 $\\text{fb}^{-1}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -41,7 +48,7 @@
    "source": [
     "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
     "df = pd.read_csv(file_name)\n",
-    "df = df.query(\"time > '2025-02-18' and time < '2025-02-19'\")"
+    "df = df.query(\"time > '2025-03-08' and time < '2025-03-09'\")"
    ]
   },
   {
@@ -54,13 +61,13 @@
      "output_type": "stream",
      "text": [
       "mjj: 300 GeV\n",
-      "ACC: 0.781 ± 0.015\n",
-      "AUC: 0.750 ± 0.047\n",
-      "$0.781 \\pm 0.015$ & $0.750 \\pm 0.047$\n",
+      "ACC: 0.712 ± 0.023\n",
+      "AUC: 0.741 ± 0.041\n",
+      "$0.712 \\pm 0.023$ & $0.741 \\pm 0.041$\n",
       "True ACC and AUC\n",
-      "ACC: 0.587 ± 0.010\n",
-      "AUC: 0.616 ± 0.015\n",
-      "$0.587 \\pm 0.010$ & $0.616 \\pm 0.015$\n"
+      "ACC: 0.576 ± 0.010\n",
+      "AUC: 0.596 ± 0.014\n",
+      "$0.576 \\pm 0.010$ & $0.596 \\pm 0.014$\n"
      ]
     }
    ],
@@ -79,13 +86,13 @@
      "output_type": "stream",
      "text": [
       "deta: 3.1\n",
-      "ACC: 0.796 ± 0.020\n",
-      "AUC: 0.804 ± 0.046\n",
-      "$0.796 \\pm 0.020$ & $0.804 \\pm 0.046$\n",
+      "ACC: 0.828 ± 0.043\n",
+      "AUC: 0.889 ± 0.050\n",
+      "$0.828 \\pm 0.043$ & $0.889 \\pm 0.050$\n",
       "True ACC and AUC\n",
-      "ACC: 0.586 ± 0.011\n",
-      "AUC: 0.606 ± 0.015\n",
-      "$0.586 \\pm 0.011$ & $0.606 \\pm 0.015$\n"
+      "ACC: 0.604 ± 0.014\n",
+      "AUC: 0.630 ± 0.015\n",
+      "$0.604 \\pm 0.014$ & $0.630 \\pm 0.015$\n"
      ]
     }
    ],
@@ -104,18 +111,111 @@
      "output_type": "stream",
      "text": [
       "mjj: 300 GeV, deta: 3.1\n",
-      "ACC: 0.774 ± 0.026\n",
-      "AUC: 0.747 ± 0.063\n",
-      "$0.774 \\pm 0.026$ & $0.747 \\pm 0.063$\n",
+      "ACC: 0.753 ± 0.022\n",
+      "AUC: 0.792 ± 0.035\n",
+      "$0.753 \\pm 0.022$ & $0.792 \\pm 0.035$\n",
       "True ACC and AUC\n",
-      "ACC: 0.556 ± 0.020\n",
-      "AUC: 0.574 ± 0.027\n",
-      "$0.556 \\pm 0.020$ & $0.574 \\pm 0.027$\n"
+      "ACC: 0.573 ± 0.007\n",
+      "AUC: 0.596 ± 0.008\n",
+      "$0.573 \\pm 0.007$ & $0.596 \\pm 0.008$\n"
      ]
     }
    ],
    "source": [
     "sample_type = 'mjj: 300 GeV, deta: 3.1'\n",
+    "print_ACC_AUC(df, sample_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Luminosity 3000 $\\text{fb}^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-03-08' and time < '2025-03-09'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mjj: 300 GeV, L: 3000 fb^-1\n",
+      "ACC: 0.907 ± 0.002\n",
+      "AUC: 0.969 ± 0.002\n",
+      "$0.907 \\pm 0.002$ & $0.969 \\pm 0.002$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.598 ± 0.008\n",
+      "AUC: 0.625 ± 0.009\n",
+      "$0.598 \\pm 0.008$ & $0.625 \\pm 0.009$\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'mjj: 300 GeV, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deta: 3.1, L: 3000 fb^-1\n",
+      "ACC: 0.931 ± 0.004\n",
+      "AUC: 0.979 ± 0.002\n",
+      "$0.931 \\pm 0.004$ & $0.979 \\pm 0.002$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.615 ± 0.005\n",
+      "AUC: 0.648 ± 0.006\n",
+      "$0.615 \\pm 0.005$ & $0.648 \\pm 0.006$\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'deta: 3.1, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mjj: 300 GeV, deta: 3.1, L: 3000 fb^-1\n",
+      "ACC: 0.929 ± 0.003\n",
+      "AUC: 0.978 ± 0.002\n",
+      "$0.929 \\pm 0.003$ & $0.978 \\pm 0.002$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.608 ± 0.004\n",
+      "AUC: 0.638 ± 0.005\n",
+      "$0.608 \\pm 0.004$ & $0.638 \\pm 0.005$\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'mjj: 300 GeV, deta: 3.1, L: 3000 fb^-1'\n",
     "print_ACC_AUC(df, sample_type)"
    ]
   }
