--- a/Note/note.tex
+++ b/Note/note.tex
@@ -94,7 +94,7 @@
 \label{sec:higgs_production}
     We want to apply deep learning methods to distinguish vector boson fusion (VBF) from gluon-gluon fusion (GGF) and Higgs production at the LHC.
 
-    We want to apply the CWoLa methods, then can use the real data without knowing the true label.
+    We want to apply the CWoLa method, then can use the real data without knowing the true label.
 % section higgs_production (end)
 \section{Sample Preparation}% (fold)
 \label{sec:sample_preparation}
@@ -193,7 +193,7 @@
     % subsection event_selection (end)
     \subsection{Event image}% (fold)
     \label{sub:event_image}
-        The inputs for the neural networks are event images~\cite{Kasieczka:2019dbj,deOliveira:2015xxd, Kasieczka2017nv}. These images are constructed from events that pass the kinematic selection criteria described in section~\ref{sub:event_selection}. Each event image has three channels corresponding to calorimeter towers, track, and photons. The following preprocessing steps are applied to all event constituents:
+        The inputs for the neural networks are event images~\cite{Kasieczka:2019dbj,deOliveira:2015xxd, Kasieczka2017nv}. These images are constructed from events that pass the kinematic selection criteria described in section~\ref{sub:event_selection}. Each event image has three channels corresponding to calorimeter towers, tracks, and photons. The following preprocessing steps are applied to all event constituents:
         \begin{enumerate}
             \item Translation: Compute the $p_{\text{T}}$-weighted center in the $\phi$ coordinates, then shift this point to the origin.
             \item Flipping: Flip the highest $p_{\text{T}}$ quadrant to the first quadrant.
@@ -329,20 +329,64 @@
             \label{fig:cnn_model_structure}
         \end{figure}
 
-        The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results}. The performance of the $m_{jj}$ and $\Delta\eta_{jj}$ cuts is similar. However, when both cuts are applied together, the performance is slightly worse than when applying either cut individually.
+        The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results}. The performance of the $\Delta\eta_{jj}$ cuts is better than the $m_{jj}$ cut. Moreover, when both cuts are applied together, the performance is slightly worse than when applying either cut individually.
         \begin{table}[htpb]
             \centering
-            \caption{The CNN training results. The ACC and AUC are evaluated based on 10 trainings. The selection cuts of $m_{jj} > \text{300 GeV}$ and $\Delta\eta_{jj} > 3.1$ are applied.}
+            \caption{The CNN training results. The ACC and AUC are evaluated based on 10 training. The selection cuts of $m_{jj} > \text{300 GeV}$ and $\Delta\eta_{jj} > 3.1$ are applied.}
             \label{tab:CWoLa_CNN_training_results}
             \begin{tabular}{l|cc|cc}
                                           & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
                 Cut                       & ACC               & AUC               & ACC               & AUC               \\ \hline
-                $m_{jj}$                  & $0.781 \pm 0.015$ & $0.750 \pm 0.047$ & $0.587 \pm 0.010$ & $0.616 \pm 0.015$ \\
-                $\Delta\eta_{jj}$         & $0.796 \pm 0.020$ & $0.804 \pm 0.046$ & $0.586 \pm 0.011$ & $0.606 \pm 0.015$ \\
-                $m_{jj}, \Delta\eta_{jj}$ & $0.774 \pm 0.026$ & $0.747 \pm 0.063$ & $0.556 \pm 0.020$ & $0.574 \pm 0.027$
+                $m_{jj}$                  & $0.712 \pm 0.023$ & $0.741 \pm 0.041$ & $0.576 \pm 0.010$ & $0.596 \pm 0.014$ \\
+                $\Delta\eta_{jj}$         & $0.828 \pm 0.043$ & $0.889 \pm 0.050$ & $0.604 \pm 0.014$ & $0.630 \pm 0.015$ \\
+                $m_{jj}, \Delta\eta_{jj}$ & $0.753 \pm 0.022$ & $0.792 \pm 0.035$ & $0.573 \pm 0.007$ & $0.596 \pm 0.008$
             \end{tabular}
         \end{table}
     % subsection training_cnn (end)
+    \subsection{More events}% (fold)
+    \label{sub:more_events}
+        This section assumes the luminosity of $\mathcal{L} = \text{3000 fb}^{-1}$. The number of events belonging to the SR and BR are summarized in table~\ref{tab:number_of_event_in_mixed_dataset_3000}.
+        \begin{table}[htpb]
+            \centering
+            \caption{The number of events of mixed datasets under different selection cuts.}
+            \label{tab:number_of_event_in_mixed_dataset_3000}
+            \subfloat[$m_{jj} > 300$ GeV]{
+                \begin{tabular}{c|cc}
+                       & GGF & VBF \\ \hline
+                    BR & 22967 & 3262 \\
+                    SR & 10034 & 8593
+                \end{tabular}
+            }
+            \subfloat[$\Delta\eta_{jj} > 3.1$]{
+                \begin{tabular}{c|cc}
+                       & GGF & VBF \\ \hline
+                    BR & 24375 & 3652 \\
+                    SR & 8626  & 8204
+                \end{tabular}
+            } \\
+            \subfloat[$m_{jj} > 300$ GeV, \newline $\Delta\eta_{jj} > 3.1$]{
+                \begin{tabular}{c|cc}
+                       & GGF & VBF \\ \hline
+                    BR & 21162 & 2763 \\
+                    SR & 6821  & 7705
+                \end{tabular}
+            }
+        \end{table}
+
+        The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000}. All datasets' performance is better than the results in table~\ref{tab:CWoLa_CNN_training_results}. The $\Delta\eta_{jj}$ cut performs better than the $m_{jj}$ cut. Moreover, when both cuts are applied together, the performance is slightly worse than the $\Delta\eta_{jj}$ cut but better than $m_{jj}$. These results are similar to the previous one. 
+        \begin{table}[htpb]
+            \centering
+            \caption{The CNN training results. The ACC and AUC are evaluated based on 10 training. The selection cuts of $m_{jj} > \text{300 GeV}$ and $\Delta\eta_{jj} > 3.1$ are applied.}
+            \label{tab:CWoLa_CNN_training_results_3000}
+            \begin{tabular}{l|cc|cc}
+                                          & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Cut                       & ACC               & AUC               & ACC               & AUC               \\ \hline
+                $m_{jj}$                  & $0.907 \pm 0.002$ & $0.969 \pm 0.002$ & $0.598 \pm 0.008$ & $0.625 \pm 0.009$ \\
+                $\Delta\eta_{jj}$         & $0.931 \pm 0.004$ & $0.979 \pm 0.002$ & $0.615 \pm 0.005$ & $0.648 \pm 0.006$ \\
+                $m_{jj}, \Delta\eta_{jj}$ & $0.929 \pm 0.003$ & $0.978 \pm 0.002$ & $0.608 \pm 0.004$ & $0.638 \pm 0.005$
+            \end{tabular}
+        \end{table}
+    % subsection more_events (end)
 % section sample_preparation (end)
 \bibliographystyle{ieeetr}
 \bibliography{reference}
