Code: Train CWoLa with different cut setting

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -218,6 +218,168 @@
     "sample_type = 'mjj: 300 GeV, deta: 3.1, L: 3000 fb^-1'\n",
     "print_ACC_AUC(df, sample_type)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Luminosity 3000 $\\text{fb}^{-1}$ with $p_{\\text{T}}$ normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-03-16' and time < '2025-03-17'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mjj: 300 GeV, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.874 ± 0.004\n",
+      "AUC: 0.946 ± 0.003\n",
+      "$0.874 \\pm 0.004$ & $0.946 \\pm 0.003$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.624 ± 0.005\n",
+      "AUC: 0.663 ± 0.006\n",
+      "$0.624 \\pm 0.005$ & $0.663 \\pm 0.006$\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'mjj: 300 GeV, L: 3000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deta: 3.1, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.928 ± 0.005\n",
+      "AUC: 0.979 ± 0.002\n",
+      "$0.928 \\pm 0.005$ & $0.979 \\pm 0.002$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.597 ± 0.005\n",
+      "AUC: 0.630 ± 0.006\n",
+      "$0.597 \\pm 0.005$ & $0.630 \\pm 0.006$\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'deta: 3.1, L: 3000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mjj: 300 GeV, deta: 3.1, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.917 ± 0.003\n",
+      "AUC: 0.973 ± 0.002\n",
+      "$0.917 \\pm 0.003$ & $0.973 \\pm 0.002$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.603 ± 0.004\n",
+      "AUC: 0.636 ± 0.006\n",
+      "$0.603 \\pm 0.004$ & $0.636 \\pm 0.006$\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'mjj: 300 GeV, deta: 3.1, L: 3000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Luminosity 3000 $\\text{fb}^{-1}$ with $p_{\\text{T}}$ normalization, $m_{jj}$: 225 GeV, $\\Delta\\eta$: 2.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-03-16' and time < '2025-03-17'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mjj: 225 GeV, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.864 ± 0.004\n",
+      "AUC: 0.940 ± 0.004\n",
+      "$0.864 \\pm 0.004$ & $0.940 \\pm 0.004$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.632 ± 0.006\n",
+      "AUC: 0.673 ± 0.007\n",
+      "$0.632 \\pm 0.006$ & $0.673 \\pm 0.007$\n",
+      "\n",
+      "deta: 2.3, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.913 ± 0.006\n",
+      "AUC: 0.972 ± 0.003\n",
+      "$0.913 \\pm 0.006$ & $0.972 \\pm 0.003$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.605 ± 0.007\n",
+      "AUC: 0.640 ± 0.009\n",
+      "$0.605 \\pm 0.007$ & $0.640 \\pm 0.009$\n",
+      "\n",
+      "mjj: 225 GeV, deta: 2.3, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.896 ± 0.007\n",
+      "AUC: 0.961 ± 0.004\n",
+      "$0.896 \\pm 0.007$ & $0.961 \\pm 0.004$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.616 ± 0.005\n",
+      "AUC: 0.653 ± 0.006\n",
+      "$0.616 \\pm 0.005$ & $0.653 \\pm 0.006$\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'mjj: 225 GeV, L: 3000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'deta: 2.3, L: 3000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'mjj: 225 GeV, deta: 2.3, L: 3000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)"
+   ]
   }
  ],
  "metadata": {
