--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -166,14 +166,14 @@
    "outputs": [],
    "source": [
     "cut_type = 'mjj'\n",
-    "cut_value = 300\n",
+    "cut_value = 225\n",
     "\n",
     "h5_path = 'data/GGF.h5'\n",
-    "output_path = 'data/mjj_cut/GGF.h5'\n",
+    "output_path = 'data/mjj_225_cut/GGF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
     "\n",
     "h5_path = 'data/VBF.h5'\n",
-    "output_path = 'data/mjj_cut/VBF.h5'\n",
+    "output_path = 'data/mjj_225_cut/VBF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
    ]
   },
@@ -184,14 +184,14 @@
    "outputs": [],
    "source": [
     "cut_type = 'deta'\n",
-    "cut_value = 3.1\n",
+    "cut_value = 2.3\n",
     "\n",
     "h5_path = 'data/GGF.h5'\n",
-    "output_path = 'data/deta_cut/GGF.h5'\n",
+    "output_path = 'data/deta_2.3_cut/GGF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
     "\n",
     "h5_path = 'data/VBF.h5'\n",
-    "output_path = 'data/deta_cut/VBF.h5'\n",
+    "output_path = 'data/deta_2.3_cut/VBF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
    ]
   },
@@ -202,14 +202,14 @@
    "outputs": [],
    "source": [
     "cut_type = 'mjj_deta'\n",
-    "cut_value = (300, 3.1)\n",
+    "cut_value = (225, 2.3)\n",
     "\n",
     "h5_path = 'data/GGF.h5'\n",
-    "output_path = 'data/mjj_deta_cut/GGF.h5'\n",
+    "output_path = 'data/mjj_225_deta_2.3_cut/GGF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
     "\n",
     "h5_path = 'data/VBF.h5'\n",
-    "output_path = 'data/mjj_deta_cut/VBF.h5'\n",
+    "output_path = 'data/mjj_225_deta_2.3_cut/VBF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
    ]
   },
@@ -289,6 +289,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/mjj_225_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/mjj_225_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/mjj_225_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/mjj_225_cut/pre-processing/GGF_in_BR.h5\n",
+      "data/deta_2.3_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/deta_2.3_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/deta_2.3_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/deta_2.3_cut/pre-processing/GGF_in_BR.h5\n",
+      "data/mjj_225_deta_2.3_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/mjj_225_deta_2.3_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/mjj_225_deta_2.3_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/mjj_225_deta_2.3_cut/pre-processing/GGF_in_BR.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/mjj_225_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/mjj_225_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/deta_2.3_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/deta_2.3_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/mjj_225_deta_2.3_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/mjj_225_deta_2.3_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -297,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +348,15 @@
       "python pixelation.py data/mjj_cut/pre-processing/VBF_in_SR.h5 data/mjj_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
       "python pixelation.py data/mjj_cut/pre-processing/VBF_in_BR.h5 data/mjj_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
       "python pixelation.py data/mjj_cut/pre-processing/GGF_in_SR.h5 data/mjj_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
-      "python pixelation.py data/mjj_cut/pre-processing/GGF_in_BR.h5 data/mjj_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
+      "python pixelation.py data/mjj_cut/pre-processing/GGF_in_BR.h5 data/mjj_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/deta_cut/pre-processing/VBF_in_SR.h5 data/deta_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/deta_cut/pre-processing/VBF_in_BR.h5 data/deta_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/deta_cut/pre-processing/GGF_in_SR.h5 data/deta_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/deta_cut/pre-processing/GGF_in_BR.h5 data/deta_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/mjj_deta_cut/pre-processing/VBF_in_SR.h5 data/mjj_deta_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_deta_cut/pre-processing/VBF_in_BR.h5 data/mjj_deta_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/mjj_deta_cut/pre-processing/GGF_in_SR.h5 data/mjj_deta_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_deta_cut/pre-processing/GGF_in_BR.h5 data/mjj_deta_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
      ]
     }
    ],
@@ -323,29 +372,22 @@
     "    h5_path = h5_dir / f'{name}.h5'\n",
     "    npy_path = npy_dir / f'{name}.npy'\n",
     "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
-    "    print(cmd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "python pixelation.py data/deta_cut/pre-processing/VBF_in_SR.h5 data/deta_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
-      "python pixelation.py data/deta_cut/pre-processing/VBF_in_BR.h5 data/deta_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
-      "python pixelation.py data/deta_cut/pre-processing/GGF_in_SR.h5 data/deta_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
-      "python pixelation.py data/deta_cut/pre-processing/GGF_in_BR.h5 data/deta_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
-     ]
-    }
-   ],
-   "source": [
-    "res = 40\n",
+    "    print(cmd)\n",
+    "\n",
     "h5_dir = Path('./data/deta_cut/pre-processing')\n",
     "npy_dir = Path(f'./data/deta_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)\n",
+    "\n",
+    "h5_dir = Path('./data/mjj_deta_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/mjj_deta_cut/pre-processing/{res}x{res}')\n",
     "\n",
     "# create output directory\n",
     "npy_dir.mkdir(parents=True, exist_ok=True)\n",
@@ -366,17 +408,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python pixelation.py data/mjj_deta_cut/pre-processing/VBF_in_SR.h5 data/mjj_deta_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
-      "python pixelation.py data/mjj_deta_cut/pre-processing/VBF_in_BR.h5 data/mjj_deta_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
-      "python pixelation.py data/mjj_deta_cut/pre-processing/GGF_in_SR.h5 data/mjj_deta_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
-      "python pixelation.py data/mjj_deta_cut/pre-processing/GGF_in_BR.h5 data/mjj_deta_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
+      "python pixelation.py data/mjj_225_cut/pre-processing/VBF_in_SR.h5 data/mjj_225_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_225_cut/pre-processing/VBF_in_BR.h5 data/mjj_225_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/mjj_225_cut/pre-processing/GGF_in_SR.h5 data/mjj_225_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_225_cut/pre-processing/GGF_in_BR.h5 data/mjj_225_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/deta_2.3_cut/pre-processing/VBF_in_SR.h5 data/deta_2.3_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/deta_2.3_cut/pre-processing/VBF_in_BR.h5 data/deta_2.3_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/deta_2.3_cut/pre-processing/GGF_in_SR.h5 data/deta_2.3_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/deta_2.3_cut/pre-processing/GGF_in_BR.h5 data/deta_2.3_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/mjj_225_deta_2.3_cut/pre-processing/VBF_in_SR.h5 data/mjj_225_deta_2.3_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_225_deta_2.3_cut/pre-processing/VBF_in_BR.h5 data/mjj_225_deta_2.3_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/mjj_225_deta_2.3_cut/pre-processing/GGF_in_SR.h5 data/mjj_225_deta_2.3_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_225_deta_2.3_cut/pre-processing/GGF_in_BR.h5 data/mjj_225_deta_2.3_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
      ]
     }
    ],
    "source": [
     "res = 40\n",
-    "h5_dir = Path('./data/mjj_deta_cut/pre-processing')\n",
-    "npy_dir = Path(f'./data/mjj_deta_cut/pre-processing/{res}x{res}')\n",
+    "h5_dir = Path('./data/mjj_225_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/mjj_225_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)\n",
+    "\n",
+    "h5_dir = Path('./data/deta_2.3_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/deta_2.3_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)\n",
+    "\n",
+    "h5_dir = Path('./data/mjj_225_deta_2.3_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/mjj_225_deta_2.3_cut/pre-processing/{res}x{res}')\n",
     "\n",
     "# create output directory\n",
     "npy_dir.mkdir(parents=True, exist_ok=True)\n",
