Code: Prepare pure dataset and test supervised CNN

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -380,6 +380,51 @@
     "sample_type = 'mjj: 225 GeV, deta: 2.3, L: 3000 fb^-1, pT normalized'\n",
     "print_ACC_AUC(df, sample_type)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Supervised CNN: 200k+50k+50k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-03-21' and time < '2025-03-22'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pure, pT normalized\n",
+      "ACC: 0.785 ± 0.001\n",
+      "AUC: 0.863 ± 0.001\n",
+      "$0.785 \\pm 0.001$ & $0.863 \\pm 0.001$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.784 ± 0.001\n",
+      "AUC: 0.861 ± 0.001\n",
+      "$0.784 \\pm 0.001$ & $0.861 \\pm 0.001$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'pure, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
