--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -524,6 +524,58 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Supervised training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_01.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_02.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_03.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_04.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_05.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_06.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_07.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_08.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_09.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/supervised_pT_norm_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_path'] = '../Sample/data/supervised/pre-processing/40x40/'\n",
+    "        data['seed'] = seed\n",
+    "        data['n_train'] = 100000\n",
+    "        data['n_val'] = 25000\n",
+    "        data['n_test'] = 25000\n",
+    "\n",
+    "        data['model_name'] = f'supervised_{i:02}'\n",
+    "        data['sample_type'] = f'pure, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN_supervised.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
