--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,6 +326,27 @@
     "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
     "    h5_path = f'./data/mjj_225_deta_2.3_cut/{name}.h5'\n",
     "    out_h5 = f'./data/mjj_225_deta_2.3_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/supervised/pre-processing/VBF.h5\n",
+      "data/supervised/pre-processing/GGF.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in ['VBF', 'GGF']:\n",
+    "    h5_path = f'./data/{name}.h5'\n",
+    "    out_h5 = f'./data/supervised/pre-processing/{name}.h5'\n",
     "    to_event_image_h5(h5_path, out_h5)"
    ]
   },
@@ -456,6 +477,35 @@
     "npy_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation.py data/supervised/pre-processing/VBF.h5 data/supervised/pre-processing/40x40/VBF.npy 40 &\n",
+      "python pixelation.py data/supervised/pre-processing/GGF.h5 data/supervised/pre-processing/40x40/GGF.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "h5_dir = Path('./data/supervised/pre-processing')\n",
+    "npy_dir = Path(f'./data/supervised/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF', 'GGF']:\n",
     "    h5_path = h5_dir / f'{name}.h5'\n",
     "    npy_path = npy_dir / f'{name}.npy'\n",
     "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
