Code: Use jet tagging to construct mixed datasets and train CWoLa CNN

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -327,7 +327,7 @@
    "source": [
     "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
     "df = pd.read_csv(file_name)\n",
-    "df = df.query(\"time > '2025-03-16' and time < '2025-03-17'\")"
+    "df = df.query(\"time > '2025-03-24' and time < '2025-03-25'\")"
    ]
   },
   {
@@ -340,31 +340,31 @@
      "output_type": "stream",
      "text": [
       "mjj: 225 GeV, L: 3000 fb^-1, pT normalized\n",
-      "ACC: 0.864 ± 0.004\n",
-      "AUC: 0.940 ± 0.004\n",
-      "$0.864 \\pm 0.004$ & $0.940 \\pm 0.004$\n",
+      "ACC: 0.863 ± 0.004\n",
+      "AUC: 0.940 ± 0.002\n",
+      "$0.863 \\pm 0.004$ & $0.940 \\pm 0.002$\n",
       "True ACC and AUC\n",
-      "ACC: 0.632 ± 0.006\n",
-      "AUC: 0.673 ± 0.007\n",
-      "$0.632 \\pm 0.006$ & $0.673 \\pm 0.007$\n",
+      "ACC: 0.716 ± 0.003\n",
+      "AUC: 0.780 ± 0.004\n",
+      "$0.716 \\pm 0.003$ & $0.780 \\pm 0.004$\n",
       "\n",
       "deta: 2.3, L: 3000 fb^-1, pT normalized\n",
-      "ACC: 0.913 ± 0.006\n",
+      "ACC: 0.914 ± 0.004\n",
       "AUC: 0.972 ± 0.003\n",
-      "$0.913 \\pm 0.006$ & $0.972 \\pm 0.003$\n",
+      "$0.914 \\pm 0.004$ & $0.972 \\pm 0.003$\n",
       "True ACC and AUC\n",
-      "ACC: 0.605 ± 0.007\n",
-      "AUC: 0.640 ± 0.009\n",
-      "$0.605 \\pm 0.007$ & $0.640 \\pm 0.009$\n",
+      "ACC: 0.702 ± 0.003\n",
+      "AUC: 0.754 ± 0.003\n",
+      "$0.702 \\pm 0.003$ & $0.754 \\pm 0.003$\n",
       "\n",
       "mjj: 225 GeV, deta: 2.3, L: 3000 fb^-1, pT normalized\n",
-      "ACC: 0.896 ± 0.007\n",
-      "AUC: 0.961 ± 0.004\n",
-      "$0.896 \\pm 0.007$ & $0.961 \\pm 0.004$\n",
+      "ACC: 0.896 ± 0.006\n",
+      "AUC: 0.962 ± 0.004\n",
+      "$0.896 \\pm 0.006$ & $0.962 \\pm 0.004$\n",
       "True ACC and AUC\n",
-      "ACC: 0.616 ± 0.005\n",
-      "AUC: 0.653 ± 0.006\n",
-      "$0.616 \\pm 0.005$ & $0.653 \\pm 0.006$\n"
+      "ACC: 0.723 ± 0.003\n",
+      "AUC: 0.780 ± 0.002\n",
+      "$0.723 \\pm 0.003$ & $0.780 \\pm 0.002$\n"
      ]
     }
    ],
@@ -422,6 +422,64 @@
    ],
    "source": [
     "sample_type = 'pure, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gluon jet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-03-30' and time < '2025-03-31'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gluon jet: = 2, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.934 ± 0.000\n",
+      "AUC: 0.689 ± 0.012\n",
+      "$0.934 \\pm 0.000$ & $0.689 \\pm 0.012$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.662 ± 0.006\n",
+      "AUC: 0.719 ± 0.008\n",
+      "$0.662 \\pm 0.006$ & $0.719 \\pm 0.008$\n",
+      "\n",
+      "gluon jet: >= 1, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.623 ± 0.005\n",
+      "AUC: 0.642 ± 0.005\n",
+      "$0.623 \\pm 0.005$ & $0.642 \\pm 0.005$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.653 ± 0.008\n",
+      "AUC: 0.706 ± 0.009\n",
+      "$0.653 \\pm 0.008$ & $0.706 \\pm 0.009$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'gluon jet: = 2, L: 3000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'gluon jet: >= 1, L: 3000 fb^-1, pT normalized'\n",
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
