--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +91,13 @@
     "    f.create_dataset('J1/pt', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
     "    f.create_dataset('J1/eta', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
     "    f.create_dataset('J1/phi', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
+    "    f.create_dataset('J1/flavor', (nevent,), maxshape=(None,), dtype='<i8')\n",
     "\n",
     "    f.create_dataset('J2/mask', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='|b1')\n",
     "    f.create_dataset('J2/pt', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
     "    f.create_dataset('J2/eta', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
     "    f.create_dataset('J2/phi', (nevent, MAX_CONSTI['Jet']), maxshape=(None, MAX_CONSTI['Jet']), dtype='<f4')\n",
+    "    f.create_dataset('J2/flavor', (nevent,), maxshape=(None,), dtype='<i8')\n",
     "\n",
     "    f.create_dataset('TOWER/mask', (nevent, MAX_CONSTI['Tower']), maxshape=(None, MAX_CONSTI['Tower']), dtype='|b1')\n",
     "    f.create_dataset('TOWER/pt', (nevent, MAX_CONSTI['Tower']), maxshape=(None, MAX_CONSTI['Tower']), dtype='<f4')\n",
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +130,8 @@
     "\n",
     "        mjj = f[f'EVENT/mjj'][:]\n",
     "        deta = f[f'EVENT/deta'][:]\n",
+    "        j1_flavor = f[f'J1/flavor'][:]\n",
+    "        j2_flavor = f[f'J2/flavor'][:]\n",
     "        if cut_type == 'mjj':\n",
     "            SR_range = mjj > cut_value\n",
     "            BR_range = mjj < cut_value\n",
@@ -137,6 +141,10 @@
     "        elif cut_type == 'mjj_deta':\n",
     "            SR_range = (mjj > cut_value[0]) & (deta > cut_value[1])\n",
     "            BR_range = (mjj < cut_value[0]) | (deta < cut_value[1])\n",
+    "        elif cut_type == 'gluon_jet':\n",
+    "            gluon_jet = (j1_flavor == 21).astype(int) + (j2_flavor == 21).astype(int)\n",
+    "            SR_range = gluon_jet >= cut_value\n",
+    "            BR_range = gluon_jet < cut_value\n",
     "        else:\n",
     "            raise ValueError(f'cut_type {cut_type} not supported')\n",
     "\n",
@@ -156,7 +164,7 @@
     "            keys = get_dataset_keys(f_SR)\n",
     "            for key in keys:\n",
     "                f_SR[key][:] = f[key][:][SR_range]\n",
-    "                f_SB[key][:] = f[key][:][BR_range]\n"
+    "                f_SB[key][:] = f[key][:][BR_range]"
    ]
   },
   {
@@ -214,6 +222,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cut_type = 'gluon_jet'\n",
+    "cut_value = 2\n",
+    "\n",
+    "h5_path = 'data/GGF.h5'\n",
+    "output_path = f'data/{cut_type}_{cut_value}_cut/GGF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/VBF.h5'\n",
+    "output_path = f'data/{cut_type}_{cut_value}_cut/VBF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "cut_value = 1\n",
+    "\n",
+    "h5_path = 'data/GGF.h5'\n",
+    "output_path = f'data/{cut_type}_{cut_value}_cut/GGF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/VBF.h5'\n",
+    "output_path = f'data/{cut_type}_{cut_value}_cut/VBF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -222,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,6 +383,38 @@
     "for name in ['VBF', 'GGF']:\n",
     "    h5_path = f'./data/{name}.h5'\n",
     "    out_h5 = f'./data/supervised/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/gluon_jet_2_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/gluon_jet_2_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/gluon_jet_2_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/gluon_jet_2_cut/pre-processing/GGF_in_BR.h5\n",
+      "data/gluon_jet_1_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/gluon_jet_1_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/gluon_jet_1_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/gluon_jet_1_cut/pre-processing/GGF_in_BR.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/gluon_jet_2_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/gluon_jet_2_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/gluon_jet_1_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/gluon_jet_1_cut/pre-processing/{name}.h5'\n",
     "    to_event_image_h5(h5_path, out_h5)"
    ]
   },
@@ -506,6 +574,53 @@
     "npy_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "for name in ['VBF', 'GGF']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation.py data/gluon_jet_2_cut/pre-processing/VBF_in_SR.h5 data/gluon_jet_2_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/gluon_jet_2_cut/pre-processing/VBF_in_BR.h5 data/gluon_jet_2_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/gluon_jet_2_cut/pre-processing/GGF_in_SR.h5 data/gluon_jet_2_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/gluon_jet_2_cut/pre-processing/GGF_in_BR.h5 data/gluon_jet_2_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/gluon_jet_1_cut/pre-processing/VBF_in_SR.h5 data/gluon_jet_1_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/gluon_jet_1_cut/pre-processing/VBF_in_BR.h5 data/gluon_jet_1_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/gluon_jet_1_cut/pre-processing/GGF_in_SR.h5 data/gluon_jet_1_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/gluon_jet_1_cut/pre-processing/GGF_in_BR.h5 data/gluon_jet_1_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "h5_dir = Path('./data/gluon_jet_2_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/gluon_jet_2_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)\n",
+    "\n",
+    "h5_dir = Path('./data/gluon_jet_1_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/gluon_jet_1_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
     "    h5_path = h5_dir / f'{name}.h5'\n",
     "    npy_path = npy_dir / f'{name}.npy'\n",
     "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
